src/analyzer/bison.output
Terminals unused in grammar

   IntLiteral
   DoubleLiteral
   BoolLiteral
   BinaryOperator
   Statement
   List
   COMMENT_ONE_LINE
   BRACE


Grammar

    0 $accept: fragment $end

    1 fragment: statementList

    2 statementList: statement
    3              | statementList statement

    4 statement: expression SEMI
    5          | assignStatement
    6          | declareStatement
    7          | ifStatement
    8          | forStatement
    9          | whileStatement
   10          | funcDefStatement
   11          | returnStatement
   12          | breakStatement
   13          | continueStatement

   14 assignStatement: postfixExpression ASSIGN expression SEMI

   15 declareStatement: dataType IDENTIFIER SEMI
   16                 | dataType IDENTIFIER ASSIGN expression SEMI

   17 ifStatement: pureIfStatement
   18            | ifStatement elifStatement
   19            | ifStatement elseStatement

   20 pureIfStatement: IF expression LCB statementList RCB

   21 elifStatement: ELIF expression LCB statementList RCB

   22 elseStatement: ELSE LCB statementList RCB

   23 forStatement: FOR IDENTIFIER IN expression LCB statementList RCB

   24 whileStatement: WHILE expression LCB statementList RCB

   25 funcDefStatement: FUNC IDENTIFIER LB parameterDefList RB LCB statementList RCB
   26                 | FUNC IDENTIFIER LB parameterDefList RB COLON dataType LCB statementList RCB

   27 returnStatement: RETURN expression SEMI

   28 breakStatement: BREAK SEMI

   29 continueStatement: CONTINUE SEMI

   30 parameterDefList: parameterDef
   31                 | parameterDefList parameterDef

   32 parameterDef: dataType IDENTIFIER
   33             | dataType IDENTIFIER COMMA

   34 parameterList: expression
   35              | parameterList COMMA expression

   36 expression: postfixExpression
   37           | expression RANGE_UNCLOSE expression
   38           | expression RANGE_CLOSE expression
   39           | expression ADD expression
   40           | expression SUB expression
   41           | expression MUL expression
   42           | expression DIV expression
   43           | expression MOD expression
   44           | expression POWER expression
   45           | expression NEQ expression
   46           | expression EQ expression
   47           | expression GT expression
   48           | expression GE expression
   49           | expression LT expression
   50           | expression LE expression
   51           | expression AND expression
   52           | expression OR expression
   53           | SUB expression

   54 postfixExpression: primaryExpression
   55                  | postfixExpression LSB expression RSB
   56                  | IDENTIFIER LB RB
   57                  | IDENTIFIER LB parameterList RB
   58                  | postfixExpression DOT IDENTIFIER LB parameterList RB
   59                  | postfixExpression DOT IDENTIFIER LB RB

   60 primaryExpression: Literal
   61                  | arrayLiteral
   62                  | dictLiteral
   63                  | IDENTIFIER
   64                  | LB expression RB

   65 arrayLiteral: LSB parameterList RSB

   66 pairList: expression COLON expression
   67         | pairList COMMA Literal COLON expression

   68 dictLiteral: LCB pairList RCB
   69            | LCB RCB

   70 dataType: INT
   71         | DOUBLE
   72         | BOOL
   73         | STRING
   74         | ARRAY
   75         | MAP
   76         | NIL


Terminals, with rules where they appear

$end (0) 0
error (256)
IntLiteral (258)
DoubleLiteral (259)
BoolLiteral (260)
IDENTIFIER (261) 15 16 23 25 26 32 33 56 57 58 59 63
Literal (262) 60 67
BinaryOperator (263)
ADD (264) 39
SUB (265) 40 53
MUL (266) 41
DIV (267) 42
MOD (268) 43
POWER (269) 44
EQ (270) 46
NEQ (271) 45
GT (272) 47
LT (273) 49
GE (274) 48
LE (275) 50
AND (276) 51
OR (277) 52
Statement (278)
List (279)
ASSIGN (280) 14 16
INT (281) 70
DOUBLE (282) 71
BOOL (283) 72
STRING (284) 73
ARRAY (285) 74
MAP (286) 75
NIL (287) 76
SEMI (288) 4 14 15 16 27 28 29
COMMA (289) 33 35 67
COLON (290) 26 66 67
IF (291) 20
ELIF (292) 21
ELSE (293) 22
FOR (294) 23
FUNC (295) 25 26
RETURN (296) 27
WHILE (297) 24
BREAK (298) 28
CONTINUE (299) 29
LB (300) 25 26 56 57 58 59 64
RB (301) 25 26 56 57 58 59 64
LCB (302) 20 21 22 23 24 25 26 68 69
RCB (303) 20 21 22 23 24 25 26 68 69
LSB (304) 55 65
RSB (305) 55 65
DOT (306) 58 59
RANGE_UNCLOSE (307) 37
RANGE_CLOSE (308) 38
IN (309) 23
COMMENT_ONE_LINE (310)
NEGATIVE (311)
BRACE (312)


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
fragment (59)
    on left: 1, on right: 0
statementList (60)
    on left: 2 3, on right: 1 3 20 21 22 23 24 25 26
statement (61)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 3
assignStatement (62)
    on left: 14, on right: 5
declareStatement (63)
    on left: 15 16, on right: 6
ifStatement (64)
    on left: 17 18 19, on right: 7 18 19
pureIfStatement (65)
    on left: 20, on right: 17
elifStatement (66)
    on left: 21, on right: 18
elseStatement (67)
    on left: 22, on right: 19
forStatement (68)
    on left: 23, on right: 8
whileStatement (69)
    on left: 24, on right: 9
funcDefStatement (70)
    on left: 25 26, on right: 10
returnStatement (71)
    on left: 27, on right: 11
breakStatement (72)
    on left: 28, on right: 12
continueStatement (73)
    on left: 29, on right: 13
parameterDefList (74)
    on left: 30 31, on right: 25 26 31
parameterDef (75)
    on left: 32 33, on right: 30 31
parameterList (76)
    on left: 34 35, on right: 35 57 58 65
expression (77)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53,
    on right: 4 14 16 20 21 23 24 27 34 35 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 55 64 66 67
postfixExpression (78)
    on left: 54 55 56 57 58 59, on right: 14 36 55 58 59
primaryExpression (79)
    on left: 60 61 62 63 64, on right: 54
arrayLiteral (80)
    on left: 65, on right: 61
pairList (81)
    on left: 66 67, on right: 67 68
dictLiteral (82)
    on left: 68 69, on right: 62
dataType (83)
    on left: 70 71 72 73 74 75 76, on right: 15 16 26 32 33


State 0

    0 $accept: . fragment $end

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    INT         shift, and go to state 4
    DOUBLE      shift, and go to state 5
    BOOL        shift, and go to state 6
    STRING      shift, and go to state 7
    ARRAY       shift, and go to state 8
    MAP         shift, and go to state 9
    NIL         shift, and go to state 10
    IF          shift, and go to state 11
    FOR         shift, and go to state 12
    FUNC        shift, and go to state 13
    RETURN      shift, and go to state 14
    WHILE       shift, and go to state 15
    BREAK       shift, and go to state 16
    CONTINUE    shift, and go to state 17
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    fragment           go to state 21
    statementList      go to state 22
    statement          go to state 23
    assignStatement    go to state 24
    declareStatement   go to state 25
    ifStatement        go to state 26
    pureIfStatement    go to state 27
    forStatement       go to state 28
    whileStatement     go to state 29
    funcDefStatement   go to state 30
    returnStatement    go to state 31
    breakStatement     go to state 32
    continueStatement  go to state 33
    expression         go to state 34
    postfixExpression  go to state 35
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38
    dataType           go to state 39


State 1

   56 postfixExpression: IDENTIFIER . LB RB
   57                  | IDENTIFIER . LB parameterList RB
   63 primaryExpression: IDENTIFIER .

    LB  shift, and go to state 40

    $default  reduce using rule 63 (primaryExpression)


State 2

   60 primaryExpression: Literal .

    $default  reduce using rule 60 (primaryExpression)


State 3

   53 expression: SUB . expression

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    expression         go to state 41
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 4

   70 dataType: INT .

    $default  reduce using rule 70 (dataType)


State 5

   71 dataType: DOUBLE .

    $default  reduce using rule 71 (dataType)


State 6

   72 dataType: BOOL .

    $default  reduce using rule 72 (dataType)


State 7

   73 dataType: STRING .

    $default  reduce using rule 73 (dataType)


State 8

   74 dataType: ARRAY .

    $default  reduce using rule 74 (dataType)


State 9

   75 dataType: MAP .

    $default  reduce using rule 75 (dataType)


State 10

   76 dataType: NIL .

    $default  reduce using rule 76 (dataType)


State 11

   20 pureIfStatement: IF . expression LCB statementList RCB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    expression         go to state 43
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 12

   23 forStatement: FOR . IDENTIFIER IN expression LCB statementList RCB

    IDENTIFIER  shift, and go to state 44


State 13

   25 funcDefStatement: FUNC . IDENTIFIER LB parameterDefList RB LCB statementList RCB
   26                 | FUNC . IDENTIFIER LB parameterDefList RB COLON dataType LCB statementList RCB

    IDENTIFIER  shift, and go to state 45


State 14

   27 returnStatement: RETURN . expression SEMI

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    expression         go to state 46
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 15

   24 whileStatement: WHILE . expression LCB statementList RCB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    expression         go to state 47
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 16

   28 breakStatement: BREAK . SEMI

    SEMI  shift, and go to state 48


State 17

   29 continueStatement: CONTINUE . SEMI

    SEMI  shift, and go to state 49


State 18

   64 primaryExpression: LB . expression RB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    expression         go to state 50
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 19

   68 dictLiteral: LCB . pairList RCB
   69            | LCB . RCB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    RCB         shift, and go to state 51
    LSB         shift, and go to state 20

    expression         go to state 52
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    pairList           go to state 53
    dictLiteral        go to state 38


State 20

   65 arrayLiteral: LSB . parameterList RSB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    parameterList      go to state 54
    expression         go to state 55
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 21

    0 $accept: fragment . $end

    $end  shift, and go to state 56


State 22

    1 fragment: statementList .
    3 statementList: statementList . statement

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    INT         shift, and go to state 4
    DOUBLE      shift, and go to state 5
    BOOL        shift, and go to state 6
    STRING      shift, and go to state 7
    ARRAY       shift, and go to state 8
    MAP         shift, and go to state 9
    NIL         shift, and go to state 10
    IF          shift, and go to state 11
    FOR         shift, and go to state 12
    FUNC        shift, and go to state 13
    RETURN      shift, and go to state 14
    WHILE       shift, and go to state 15
    BREAK       shift, and go to state 16
    CONTINUE    shift, and go to state 17
    LB          shift, and go to state 18
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    $default  reduce using rule 1 (fragment)

    statement          go to state 57
    assignStatement    go to state 24
    declareStatement   go to state 25
    ifStatement        go to state 26
    pureIfStatement    go to state 27
    forStatement       go to state 28
    whileStatement     go to state 29
    funcDefStatement   go to state 30
    returnStatement    go to state 31
    breakStatement     go to state 32
    continueStatement  go to state 33
    expression         go to state 34
    postfixExpression  go to state 35
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38
    dataType           go to state 39


State 23

    2 statementList: statement .

    $default  reduce using rule 2 (statementList)


State 24

    5 statement: assignStatement .

    $default  reduce using rule 5 (statement)


State 25

    6 statement: declareStatement .

    $default  reduce using rule 6 (statement)


State 26

    7 statement: ifStatement .
   18 ifStatement: ifStatement . elifStatement
   19            | ifStatement . elseStatement

    ELIF  shift, and go to state 58
    ELSE  shift, and go to state 59

    $default  reduce using rule 7 (statement)

    elifStatement  go to state 60
    elseStatement  go to state 61


State 27

   17 ifStatement: pureIfStatement .

    $default  reduce using rule 17 (ifStatement)


State 28

    8 statement: forStatement .

    $default  reduce using rule 8 (statement)


State 29

    9 statement: whileStatement .

    $default  reduce using rule 9 (statement)


State 30

   10 statement: funcDefStatement .

    $default  reduce using rule 10 (statement)


State 31

   11 statement: returnStatement .

    $default  reduce using rule 11 (statement)


State 32

   12 statement: breakStatement .

    $default  reduce using rule 12 (statement)


State 33

   13 statement: continueStatement .

    $default  reduce using rule 13 (statement)


State 34

    4 statement: expression . SEMI
   37 expression: expression . RANGE_UNCLOSE expression
   38           | expression . RANGE_CLOSE expression
   39           | expression . ADD expression
   40           | expression . SUB expression
   41           | expression . MUL expression
   42           | expression . DIV expression
   43           | expression . MOD expression
   44           | expression . POWER expression
   45           | expression . NEQ expression
   46           | expression . EQ expression
   47           | expression . GT expression
   48           | expression . GE expression
   49           | expression . LT expression
   50           | expression . LE expression
   51           | expression . AND expression
   52           | expression . OR expression

    ADD            shift, and go to state 62
    SUB            shift, and go to state 63
    MUL            shift, and go to state 64
    DIV            shift, and go to state 65
    MOD            shift, and go to state 66
    POWER          shift, and go to state 67
    EQ             shift, and go to state 68
    NEQ            shift, and go to state 69
    GT             shift, and go to state 70
    LT             shift, and go to state 71
    GE             shift, and go to state 72
    LE             shift, and go to state 73
    AND            shift, and go to state 74
    OR             shift, and go to state 75
    SEMI           shift, and go to state 76
    RANGE_UNCLOSE  shift, and go to state 77
    RANGE_CLOSE    shift, and go to state 78


State 35

   14 assignStatement: postfixExpression . ASSIGN expression SEMI
   36 expression: postfixExpression .
   55 postfixExpression: postfixExpression . LSB expression RSB
   58                  | postfixExpression . DOT IDENTIFIER LB parameterList RB
   59                  | postfixExpression . DOT IDENTIFIER LB RB

    ASSIGN  shift, and go to state 79
    LSB     shift, and go to state 80
    DOT     shift, and go to state 81

    $default  reduce using rule 36 (expression)


State 36

   54 postfixExpression: primaryExpression .

    $default  reduce using rule 54 (postfixExpression)


State 37

   61 primaryExpression: arrayLiteral .

    $default  reduce using rule 61 (primaryExpression)


State 38

   62 primaryExpression: dictLiteral .

    $default  reduce using rule 62 (primaryExpression)


State 39

   15 declareStatement: dataType . IDENTIFIER SEMI
   16                 | dataType . IDENTIFIER ASSIGN expression SEMI

    IDENTIFIER  shift, and go to state 82


State 40

   56 postfixExpression: IDENTIFIER LB . RB
   57                  | IDENTIFIER LB . parameterList RB

    IDENTIFIER  shift, and go to state 1
    Literal     shift, and go to state 2
    SUB         shift, and go to state 3
    LB          shift, and go to state 18
    RB          shift, and go to state 83
    LCB         shift, and go to state 19
    LSB         shift, and go to state 20

    parameterList      go to state 84
    expression         go to state 55
    postfixExpression  go to state 42
    primaryExpression  go to state 36
    arrayLiteral       go to state 37
    dictLiteral        go to state 38


State 41

   37 expression: expression . RANGE_UNCLOSE expression
   38           | expression . RANGE_CLOSE expression
   39           | expression . ADD expression
   40           | expression . SUB expression
   41           | expression . MUL expression
   42           | expression . DIV expression
   43           | expression . MOD expression
   44           | expression . POWER expression
   45           | expression . NEQ expression
   46           | expression . EQ expression
   47           | expression . GT expression
   48           | expression . GE expression
   49           | expression . LT expression
   50           | expression . LE expression
   51           | expression . AND expression
   52           | expression . OR expression
   53           | SUB expression .

    POWER  shift, and go to state 67

    $default  reduce using rule 53 (expression)


State 42

   36 expression: postfixExpression .
   55 postfixExpression: postfixExpression . LSB expression RSB
   58                  | postfixExpression . DOT IDENTIFIER LB parameterList RB
   59                  | postfixExpression . DOT IDENTIFIER LB RB

    LSB  shift, and go to state 80
    DOT  shift, and go to state 81

    $default  reduce using rule 36 (expression)


State 43

   20 pureIfStatement: IF expression . LCB statementList RCB
   37 expression: expression . RANGE_UNCLOSE expression
   38           | expression . RANGE_CLOSE expression
   39           | expression . ADD expression
   40           | expression . SUB expression
   41           | expression . MUL expression
   42           | expression . DIV expression
   43           | expression . MOD expression
   44           | expression . POWER expression
   45           | expression . NEQ expression
   46           | expression . EQ expression
   47           | expression . GT expression
   48           | expression . GE expression
   49           | expression . LT expression
   50           | expression . LE expression
   51           | expression . AND expression
   52           | expression . OR expression

    ADD            shift, and go to state 62
    SUB            shift, and go to state 63
    MUL            shift, and go to state 64
    DIV            shift, and go to state 65
    MOD            shift, and go to state 66
    POWER          shift, and go to state 67
    EQ             shift, and go to state 68
    NEQ            shift, and go to state 69
    GT             shift, and go to state 70
    LT             shift, and go to state 71
    GE             shift, and go to state 72
    LE             shift, and go to state 73
    AND            shift, and go to state 74
    OR             shift, and go to state 75
    LCB            shift, and go to state 85
    RANGE_UNCLOSE  shift, and go to state 77
    RANGE_CLOSE    shift, and go to state 78


State 44

   23 forStatement: FOR IDENTIFIER . IN expression LCB statementList RCB

    IN  shift, and go to state 86


State 45

   25 funcDefStatement: FUNC IDENTIFIER . LB parameterDefList RB LCB statementList RCB
   26                 | FUNC IDENTIFIER . LB parameterDefList RB COLON dataType LCB statementList RCB

    LB  shift, and go to state 87


State 46

   27 returnStatement: RETURN expression . SEMI
   37 expression: expression . RANGE_UNCLOSE expression
   38           | expression . RANGE_CLOSE expression
   39           | expression . ADD expression
   40           | expression . SUB expression
   41           | expression . MUL expression
   42           | expression . DIV expression
   43           | expression . MOD expression
   44           | expression . POWER expression
   45           | expression . NEQ expression
   46           | expression . EQ expression
   47           | expression . GT expression
   48           | expression . GE expression
   49           | expression . LT expression
   50           | expression . LE expression
   51           | expression . AND expression
   52           | expression . OR expression

    ADD            shift, and go to state 62
    SUB            shift, and go to state 63
    MUL            shift, and go to state 64
    DIV            shift, and go to state 65
    MOD            shift, and go to state 66
    POWER          shift, and go to state 67
    EQ             shift, and go to state 68
    NEQ            shift, and go to state 69
    GT             shift, and go to state 70
    LT             shift, and go to state 71
    GE             shift, and go to state 72
    LE             shift, and go to state 73
    AND            shift, and go to state 74
    OR             shift, and go to state 75
    SEMI           shift, and go to state 88
    RANGE_UNCLOSE  shift, and go to state 77
    RANGE_CLOSE    shift, and go to state 78


State 47
